--- a/styles/index.css
+++ b/styles/index.css
@@ -96,6 +96,7 @@ plug .child {
   width: 100%;
 }
 #work-title{
+  z-index: 1;
   pointer-events: none;
   position: sticky;
   top: 0;
@@ -116,6 +117,7 @@ project img{
   object-fit: cover;
 }
 #project-row{
+  z-index: 2;
   flex-direction: column;
   width: 85%;
 }
